--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "md-links",
+  "name": "md-links-carolina",
   "author": "Carolina Navarro Marticorena <caroonava21@gmail.com> (https://github.com/Carolinava21/DEV011-md-links)", 
   "version": "0.1.0",
   "engines": {
