--- a/package.json
+++ b/package.json
@@ -8,5 +8,14 @@
     "createdAt": "2023-09-22T12:23:39.903Z",
     "version": "7.1.0",
     "commit": "d257c41694344460623eb1f1bb2a690bdfe33f83"
+  },
+  "scripts": {
+    "test": "jest --coverage"
+  },
+  "dependencies": {
+    "axios": "^1.6.2",
+    "jest": "^29.7.0",
+    "jsdom": "^23.0.1",
+    "marked": "^11.1.0"
   }
 }
