--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "md-links",
+  "name": "lucast-md-links",
   "version": "0.1.0",
   "engines": {
     "node": ">=16.x"
@@ -9,7 +9,7 @@
     "version": "7.1.0",
     "commit": "d257c41694344460623eb1f1bb2a690bdfe33f83"
   },
-  "scripts": {
+    "scripts": {
     "test": "jest --coverage"
   },
   "dependencies": {
@@ -17,5 +17,29 @@
     "jest": "^29.7.0",
     "jsdom": "^23.0.1",
     "marked": "^11.1.0"
-  }
+  },
+  "bin": {
+    "lucast-md-links": "cli.js"
+  },
+  "description": "Herramienta para extraer y validar links de un archivo Markdown",
+  "main": "index.js",
+  "directories": {
+    "doc": "docs",
+    "test": "test"
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Luisa-Castro/DEV011-md-links.git"
+  },
+  "author": {
+    "name":"Luisa Castro",
+    "email": "luisa.castroa@hotmail.com",
+    "url": "https://www.linkedin.com/in/luisa-f-castro-acevedo/"
+  },
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Luisa-Castro/DEV011-md-links/issues"
+  },
+  "homepage": "https://github.com/Luisa-Castro/DEV011-md-links#readme"
 }
